infrastructure/k8s/azure/cloud-native-go-lb.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-native-go
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8082
  selector:
    app: cloud-native-go
