infrastructure/k8s/azure/cloud-native-go-app-gw.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-native-go
spec:
  ports:
    - port: 80
      targetPort: 8082
  selector:
    app: cloud-native-go

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-native-go
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: cloud-native-go
              servicePort: 80
